[package]
name = "s3-algo"
description = "High-performance algorithms for batch operations to Amazon S3"
version = "0.3.0"
authors = ["Erlend Langseth <3rlendhl@gmail.com>"]
license = "MIT"
edition = "2018"

documentation = "https://docs.rs/s3-algo/0.1.9/s3_algo/"
repository = "https://github.com/openanalytics/s3-algo"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = {version = "0.3.13"}
futures-stopwatch = "0.3.0"
futures-retry = "0.6.0"
rusoto_s3 = "0.46.0"
rusoto_core = "0.46.0"
tokio = {version = "1.2.0", features = ["time", "fs", "macros", "rt", "io-util", "sync"]}
tokio-util = {version = "0.6.3", features = ["codec"]}
bytes = "1.0.1"
serde = {optional = true, version = "1.0", features = ["derive"]}
snafu = {version = "0.6.1", features = ["futures"]}
walkdir = "2.3.1"

[dev-dependencies]
tempdir = "0.3.7"
multi-default-trait-impl = "0.1.2"
rand = "0.7.0"
clap = "2.33.0"

[features]
default = ["serde1"]
serde1 = ["serde"]
